--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "lint": "eslint .",
-    "fix": "eslint . --fix",
+    "lint": "eslint ./src",
+    "fix": "eslint ./src --fix",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
