--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "siouplait",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://siouplait.github.io/order",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -15,7 +16,9 @@
     "fix": "eslint ./src --fix",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build",
+    "deploy": "story-base -d build"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.5",
@@ -28,6 +31,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "gh-pages": "^1.2.0"
   }
 }
