--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "4.3.1",
+    "react-scripts": "1.1.4",
+    "react-swipeable-views": "^0.12.14"
   },
   "scripts": {
     "start": "react-scripts start",
