--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "homepage": "https://siouplait.github.io/order",
   "dependencies": {
     "@reach/router": "^1.1.1",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "react-swipeable-views": "^0.12.14"
+    "react-swipeable-views": "^0.12.14",
+    "redux": "^4.0.0",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
