--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "react-swipeable-views": "^0.12.14"
+    "react-swipeable-views": "^0.12.14",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
