--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "siouplait",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://siouplait.github.io/order",
+  "homepage": "https://siouplait.github.io/order/",
   "dependencies": {
     "@reach/router": "^1.1.1",
-    "react": "^16.3.2",
+    "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "react-swipeable-views": "^0.12.14",
     "redux": "^4.0.0"
   },
   "scripts": {
@@ -19,24 +17,15 @@
     "lint": "eslint ./src",
     "fix": "eslint ./src --fix",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s src/stories .out",
     "predeploy": "npm run build",
-    "deploy": "story-base -d build",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.5",
-    "@storybook/addon-links": "^3.4.5",
-    "@storybook/addon-notes": "^3.4.6",
-    "@storybook/addon-storysource": "^3.4.6",
-    "@storybook/react": "^3.4.5",
-    "@storybook/storybook-deployer": "^2.3.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0"
   }
